# multi.ia

./: README.md  docker-compose.yml  pyproject.toml
.docker/pg/: Dockerfile
src/: asgi.py  main.py  settings.py
src/.chainlit/: config.toml
src/env/local/: .env
src/modules/: cl.py  prompts.py
src/tools/logistics/: agent.py  models.py  tools.py
src/tools/production/: agent.py  models.py  tools.py
src/tools/weather/: agent.py  models.py  tools.py
